--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,14 @@
 name: vy_lock
 description: Simple function for forcing one at a time acces to a method (mutex)
-version: 0.1.2
+version: 0.2.0
 #homepage: https://www.example.com
-author: Giorgio Franceschetti <giorgiofran@gmail.com>
 
 environment:
-  sdk: '>=2.3.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 #dependencies:
 
 dev_dependencies:
-  test: ^1.6.0
-  pedantic: 1.8.0
-  synchronized: any
+  test: ^1.16.4
+  pedantic: ^1.10.0
+  synchronized: ^3.0.0
